Fix overflow of code column horizontally

--- a/src/main/content/_assets/css/doc-header.css
+++ b/src/main/content/_assets/css/doc-header.css
@@ -151,9 +151,13 @@
 
 #breadcrumb_row .fileName {
     position: absolute;
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 26px;
     color: white;
     left: 50%;
-    border-left: 2px solid #1E1F38;
+    padding-left: 12px;
+    border-left: 2px solid #1E1F38;        
 }
 
 #breadcrumb_row .fileName:before {
@@ -210,6 +214,10 @@
     #breadcrumb_row .breadcrumb {
         overflow: auto;
         white-space: nowrap;
+    }
+
+    .breadcrumb > .fileName {
+        display: none;
     }
 }
 
