--- a/src/main/content/_assets/css/table-of-contents.css
+++ b/src/main/content/_assets/css/table-of-contents.css
@@ -242,15 +242,5 @@
         background-color: white;
         z-index: 0;
         box-shadow: none;
-    }
-
-    #guide_column {
-        width: 30.58%;
-        display: inline-block;
-    }
-
-    #code_column {
-        width: 50.66%;
-        display: inline-block;
-    }
+    }    
 }
